// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`effector-root/macro add sid and loc: add sid and loc 1`] = `

import { createStore, createEvent, createEffect, attach, restore, root } from './macro';
const fx = createEffect(() => 1);
const $data = createStore(0);
const was = createEvent();
const demo = root.createEvent();
const anotherFx = attach({
  effect: fx,
  source: $data,
  mapParams: (a) => a,
})
const $has = restore(was, "");

      ↓ ↓ ↓ ↓ ↓ ↓

var _effectorFileName = '/macro.test.js';
import { root as _root } from 'effector-root';
import { restore as _restore } from 'effector-root';
import { attach as _attach } from 'effector-root';
import { createEffect as _createEffect } from 'effector-root';
import { createEvent as _createEvent } from 'effector-root';
import { createStore as _createStore } from 'effector-root';

const fx = _createEffect(() => 1, {
  loc: {
    file: _effectorFileName,
    line: 2,
    column: 11,
  },
  name: 'fx',
  sid: '-u6p3sc',
});

const $data = _createStore(0, {
  loc: {
    file: _effectorFileName,
    line: 3,
    column: 14,
  },
  name: '$data',
  sid: '8tv02c',
});

const was = _createEvent({
  loc: {
    file: _effectorFileName,
    line: 4,
    column: 12,
  },
  name: 'was',
  sid: '-3z5gxy',
});

const demo = _root.createEvent({
  loc: {
    file: _effectorFileName,
    line: 5,
    column: 13,
  },
  name: 'demo',
  sid: 'xaneri',
});

const anotherFx = _attach({
  ɔ: {
    effect: fx,
    source: $data,
    mapParams: (a) => a,
  },
  config: {
    loc: {
      file: _effectorFileName,
      line: 6,
      column: 18,
    },
    name: 'anotherFx',
    sid: '-3vcg62',
  },
});

const $has = _restore(was, '', {
  loc: {
    file: _effectorFileName,
    line: 11,
    column: 13,
  },
  name: '$has',
  sid: 'd9tvji',
});


`;

exports[`effector-root/macro add sid: add sid 1`] = `

import { createStore, createEvent, createEffect, attach, restore, root } from './macro';
const fx = createEffect(() => 1);
const $data = createStore(0);
const was = createEvent();
const demo = root.createEvent();
const anotherFx = attach({
  effect: fx,
  source: $data,
  mapParams: (a) => a,
})
const $has = restore(was, "");

      ↓ ↓ ↓ ↓ ↓ ↓

import { root as _root } from 'effector-root';
import { restore as _restore } from 'effector-root';
import { attach as _attach } from 'effector-root';
import { createEffect as _createEffect } from 'effector-root';
import { createEvent as _createEvent } from 'effector-root';
import { createStore as _createStore } from 'effector-root';

const fx = _createEffect(() => 1, {
  name: 'fx',
  sid: '-u6p3sc',
});

const $data = _createStore(0, {
  name: '$data',
  sid: '8tv02c',
});

const was = _createEvent({
  name: 'was',
  sid: '-3z5gxy',
});

const demo = _root.createEvent({
  name: 'demo',
  sid: 'xaneri',
});

const anotherFx = _attach({
  ɔ: {
    effect: fx,
    source: $data,
    mapParams: (a) => a,
  },
  config: {
    name: 'anotherFx',
    sid: '-3vcg62',
  },
});

const $has = _restore(was, '', {
  name: '$has',
  sid: 'd9tvji',
});


`;
